# slowhand

./: .gitignore  README.md  build-install.sh  pyproject.toml
jobs/: revault-deploy-to-stg.yaml  revault-dev-to-stg.yaml  revault-new-cycle.yaml  sample-job.yaml
src/slowhand/: check.py  cli.py  config.py  context.py  errors.py  loader.py  logging.py  main.py  models.py  runner.py  tools.py  utils.py  version.py
src/slowhand/actions/: __init__.py  abort.py  base.py  git.py  github.py  jira.py  print.py  revault_deploy.py  revault_deps.py  setup.py  shell.py  slack.py  version.py
src/slowhand/expression/: __init__.py  lexer.py  parser.py
src/slowhand/jobs/: revault-dev-to-stg-v0.yaml  revault-dev-to-stg.yaml  revault-new-cycle.yaml  revault-ppr-to-prd.yaml  revault-stg-to-ppr.yaml  revault-update-deps.yaml  sample.yaml  setup.yaml  test.yaml
src/slowhand/logging/: __init__.py  logger.py  styling.py
tests/: conftest.py  test_expression.py  test_jobs.py  test_models.py
tests/actions/: test_version.py
